--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,6 +11,7 @@
             </div>
         </div>
     </div>
+    <a href="/blogs/<%= blog._id %>/edit">Edit</a>
 </div>
 
 <% include partials/footer %>
