--- a/views/show.ejs
+++ b/views/show.ejs
@@ -11,7 +11,10 @@
             </div>
         </div>
     </div>
-    <a href="/blogs/<%= blog._id %>/edit">Edit</a>
+    <a class="ui blue basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
+   <form action="/blogs/<%= blog._id%>?_method=DELETE" method="POST">
+       <button class="ui red basic button">Delete</button>
+   </form>
 </div>
 
 <% include partials/footer %>
