--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,7 +12,7 @@
         </div>
     </div>
     <a class="ui blue basic button" href="/blogs/<%= blog._id %>/edit">Edit</a>
-   <form action="/blogs/<%= blog._id%>?_method=DELETE" method="POST">
+   <form id="delete" action="/blogs/<%= blog._id%>?_method=DELETE" method="POST">
        <button class="ui red basic button">Delete</button>
    </form>
 </div>
